<resources>
    <string name="app_name">Gluon Konfigurator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <!--  General -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading ..</string>

    <!-- ErrorMessages -->
    <string name="error_no_host">Error: No host configured</string>
    <string name="error_no_auth_method">Error: No authentication Method specified</string>
    <string name="error_no_auth_password">Error: No password specified</string>
    <string name="error_no_auth_key">Error: No keyfile imported</string>
    <string name="error_key_not_exist">Error: Keyfile does not exists</string>
    <string name="error_not_available">Error: Not available</string>

    <!-- Content -->
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="share_location">Share Location</string>
    
    <string name="info">Info</string>
    <string name="connected_clients">Connected Clients</string>
    <string name="reboot_to_config">Reboot to config Mode</string>
    <string name="community_version">Community version</string>
    <string name="gluon_version">Gluon version</string>

    <string name="general">General</string>
    <string name="contact">Contact</string>
    <string name="hostname">Hostname</string>


    <string name="auto_updater">Auto-Updater</string>
    <string name="status">Status</string>
    <string name="branch">Branch</string>
    <string name="force_update">Force update</string>


    <string name="mesh">Mesh</string>
    <string name="mesh_on_WAN">Mesh on WAN-Port</string>
    <string name="mesh_on_LAN">Mesh on LAN-Port</string>
    
    <string name="internet">Internet</string>
    <string name="limit_bandwith">Limit bandwidth</string>
    <string name="limit_bandwith_upload">Limit bandwidth upload</string>
    <string name="limit_bandwith_download">Limit bandwidth download</string>

    <string name="wifi">Wifi</string>
    <string name="transmitting_power">Transmitting Power</string>
    
    <string name="not_available">Not Available/Set</string>
    <string name="not_connected">Not connected</string>
    <string name="not_connected_change">You cannot change the settings, when you are not connected to the node</string>


    <!-- Expert Mode -->
    <string name="expert">Expert</string>
    <string name="gateways">Gateways</string>
    <string name="client_network">Disable client network</string>
    <string name="fastd_publ_key">Fastd Public Key</string>


    <!-- Host Dialog -->
    <string name="ip_adress">IP address</string>
    <string name="node_name">Node name</string>
    <string name="invalid_ipadress">Invalid IPAdress</string>
    <string name="add_node">Add node</string>

    <!-- Delete Host Dialog -->
    <string name="delete_node">Delete Node</string>
    <string name="delete_node_text">Are you sure you want to remove this nodes?</string>
    
    
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="authentication">Authentication</string>
    <string name="host">Host</string>
    <string name="host_summary">iP of Host (v4,v6)</string>
    <string name="auth_summary">Select Authentication Method</string>
    <string name="auth_text">Authentication Method</string>
    <string name="password">Password</string>
    <string name="password_summary">Password for password based SSH login</string>
    <string name="key">Key</string>
    <string name="key_summary">Private Key for key based SSH login</string>
    <string name="key_password">Key password</string>
    <string name="key_password_summary">Password for encrypted Key</string>
    <string name="username">Username</string>
    <string name="username_summary">Username for SSH login</string>
    <string name="select_nodes">Select nodes</string>
    <string name="select_nodes_summary">Nodes which will be updated based on location</string>


    <string name="expert_mode">Expert Mode</string>
    <string name="expert_mode_summary">Enable additional modules. For experts only!</string>


    <string name="automatic_location">Location Update</string>
    <string name="automatic_location_summary">Enable automatic Location Update of AP based on Location of Smartphone</string>
    <string name="use_gps">Use GPS</string>
    <string name="use_gps_summary">Use GPS to acquire current position</string>
    <string name="use_wifi">Use Wifi</string>
    <string name="use_wifi_summary">Use Wifi to acquire current position</string>
    <string name="use_passive_location">Use passive Location</string>
    <string name="use_passive_location_summary">Receive Position when other apps are locating the device</string>
    <string name="check_new_postition">Check for new Position</string>
    <string name="check_new_postition_summary">Check every x minutes for a new Position</string>
    <string name="min_distance">Minimum Distance</string>
    <string name="min_distance_summary">Minimum Distance in meters before new location is registered</string>




    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="ic_keyboard_arrow_left">&#xe0c6;</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_keyboard_arrow_up">&#xe0c8;</string>


</resources>
